# to_do_app

./: PULL_REQUEST.md  TUTORIAL.md
memory/: constitution.md
specs/001-build-a-to/: contracts-simplified.yaml  data-model-simplified.md  data-model.md  frontend-research.md  implementation-guide.md  libraries-specification.md  plan-simplified.md  plan.md  quickstart.md  research.md  spec.md  template-specifications.md
specs/001-build-a-to/contracts/: openapi.yaml
todo-api/: pyproject.toml
todo-api/src/todo_api/: __init__.py  cli.py  main.py
todo-api/src/todo_api/templates/: _task.html  base.html  index.html
todo-api/tests/unit/: test_cli.py  test_main.py
todo-cli/: pyproject.toml
todo-cli/src/todo_cli/: __init__.py  cli.py
todo-cli/tests/unit/: test_cli.py
todo-core/: pyproject.toml
todo-core/src/todo_core/: __init__.py  cli.py  models.py  operations.py
todo-core/tests/: conftest.py
todo-core/tests/unit/: test_cli.py  test_models.py  test_operations.py
